[package]
name = "mailgun46"
version = "0.2.0"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Simple Mailgun client"
documentation = "https://docs.rs/mailgun46"
repository = "https://github.com/MOBILITY46/mailgun46"

[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11.3" , features = [ "json" ] }
serde = { version = "1.0.125", features = [ "derive" ] }
serde_json = "1.0.64"

[dev-dependencies]
anyhow = "1.0.40"
tokio = { version ="1.5.0", features = [ "rt-multi-thread", "macros" ] }
wiremock = "0.5.2"
