[package]
name = "mailgun46"
version = "0.2.1"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Simple Mailgun client"
documentation = "https://docs.rs/mailgun46"
repository = "https://github.com/MOBILITY46/mailgun46"

[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11.4" , features = [ "json" ] }
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.68"

[dev-dependencies]
tokio = { version ="1.12.0", features = [ "rt-multi-thread", "macros" ] }
wiremock = "0.5.7"
