[package]
name = "mailgun46"
version = "0.4.0"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Simple Mailgun client"
documentation = "https://docs.rs/mailgun46"
repository = "https://github.com/MOBILITY46/mailgun46"


[features]
default = [ "default-tls" ]
default-tls = [ "reqwest/default-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]


[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11.11" , default_features = false, features = [ "json" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

[dev-dependencies]
tokio = { version ="1.20", features = [ "rt-multi-thread", "macros" ] }
wiremock = "0.5.14"
